# scvd

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  openapi.json  openapi.yaml  pyproject.toml  requirements.txt  scvd.postman_collection.json
api/: app.py
data/: LICENSE-CC0
data/extracted/cyfrin/: 2023-04-11-cyfrin-hyperliquid-dex-report.json  2024-02-23-cyfrin-swell-barracuda.json  2024-05-04-cyfrin-solidly-v2-memecore-v2-2.json  2025-03-28-cyfrin-rocko-refinance-v2.json  2025-06-02-cyfrin-evo-soulboundtoken-v2.json  2025-10-22-cyfrin-remora-dynamic-tokens-v2.json
data/extracted/trailofbits/: 2024-07-taraxa-bridge-smart-contracts-v2-securityreview.html  2024-07-taraxa-bridge-smart-contracts-v2-securityreview.json  2024-07-taraxa-bridge-smart-contracts-v2-securityreview.md  2024-08-offchainlabs-timeboost-auction-contracts-securityreview.html  2024-08-offchainlabs-timeboost-auction-contracts-securityreview.json  2024-08-offchainlabs-timeboost-auction-contracts-securityreview.md  2024-12-pixelswap-dex-securityreview.html  2024-12-pixelswap-dex-securityreview.json  2024-12-pixelswap-dex-securityreview.md  2024-12-rubycentral-rubygemsorg-securityreview.html  2024-12-rubycentral-rubygemsorg-securityreview.json  2024-12-rubycentral-rubygemsorg-securityreview.md  2025-01-bacon-labs-bunniv2-securityreview.html  Flexa.html  (+4 more)
data/vocab/: swc.json
schema/: scvd_finding_v0_1.json
src/scvd/: api.py  dashboard.py  extract_report.py  normalize_report.py  run_pipeline.py  swc_matcher.py  validate_scvd.py
src/scvd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+44 files in other folders)
