[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scvd"
version = "0.0.1"
description = "Smart Contract Vulnerability Database PoC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "pandas",
  "streamlit",
  "jsonschema",
]

[tool.setuptools.packages.find]
where = ["src"]
